<resources>
    <string name="app_name">SwapBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="ApplicationName">SwapBook</string>
    <string name="libri_consigliati">Libri Consigliati</string>
    <string name="libri_famosi">Libri Famosi</string>
    <string name="vedi_tutti">Vedi Tutti..</string>
    <string name="generi_consigliati">Generi consigliati</string>
    <string name="chat">Chat</string>

    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="type_message">Type Message</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="btn_save">Save</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_message">Message</string>
    <string name="label_profile">Profile</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="harry_potter_random_synopsis">Late one night, Albus Dumbledore and Minerva McGonagall, professors at Hogwarts School of Witchcraft and Wizardry, along with the school\'...</string>
    <string name="action_search">search</string>


    <array name="genres">
        <item>Avventura</item>
        <item>Autobiografia</item>
        <item>Biografia</item>
        <item>Cronaca</item>
        <item>Cucina</item>
        <item>Diritto</item>
        <item>Distopia</item>
        <item>Economia</item>
        <item>Fantascienza</item>
        <item>Fantasy</item>
        <item>Fiaba</item>
        <item>Fumetti</item>
        <item>Giallo</item>
        <item>Horror</item>
        <item>Informatica</item>
        <item>Letteratura</item>
        <item>Linguistico</item>
        <item>Manga</item>
        <item>Medicina</item>
        <item>Politica</item>
        <item>Religione</item>
        <item>Romanzo storico</item>
        <item>Rosa</item>
        <item>Scienza</item>
        <item>Scolastico</item>
        <item>Sport</item>
        <item>Umoristico</item>
    </array>

    <array name="sex">
        <item>Maschio</item>
        <item>Femmina</item>
        <item>Altro</item>
    </array>

    <string name="display_price">$%,.0s</string>
</resources>