<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="homeViewModel"
            type="com.example.swapbook.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homeConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="com.example.swapbook.home.HomeFragment">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/ic_action_profile"
                        android:padding="@dimen/paddingDefault"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/kaushan_script"
                        android:text="@string/ApplicationName"
                        android:textSize="60sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.237"
                        app:layout_constraintStart_toEndOf="@+id/button2"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/paddingDefault"
                        android:text="@string/generi_consigliati"
                        android:textSize="@dimen/homeSectionTitle"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/genre_carousel_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{homeViewModel.response}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5"
                        tools:text="ciao" />

<!--                    <androidx.recyclerview.widget.RecyclerView-->
<!--                        android:id="@+id/genre_carousel_home"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="125dp"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:layout_constraintHorizontal_bias="0.0"-->
<!--                        app:layout_constraintStart_toStartOf="parent"-->
<!--                        app:layout_constraintTop_toBottomOf="@+id/textView5">-->

<!--                    </androidx.recyclerview.widget.RecyclerView>-->

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/paddingDefault"
                        android:text="@string/libri_consigliati"
                        android:textAllCaps="false"
                        android:textSize="@dimen/homeSectionTitle"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/genre_carousel_home" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/book_carousel_home1"
                        android:layout_width="match_parent"
                        android:layout_height="225dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/paddingDefault"
                        android:text="@string/libri_famosi"
                        android:textSize="@dimen/homeSectionTitle"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/textView11"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/book_carousel_home1" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vedi_tutti"
                        android:textSize="@dimen/vediTuttiSize"
                        app:layout_constraintBottom_toTopOf="@+id/recyclerView4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/book_carousel_home1" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView4"
                        android:layout_width="match_parent"
                        android:layout_height="225dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView10" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button"
                        app:layout_constraintBottom_toTopOf="@+id/book_carousel_home1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.9"
                        app:layout_constraintStart_toEndOf="@+id/textView7"
                        app:layout_constraintTop_toBottomOf="@+id/genre_carousel_home" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>